Fix z-index of buttons

--- a/client/src/components/Upload/UploadWrapper.css
+++ b/client/src/components/Upload/UploadWrapper.css
@@ -791,6 +791,7 @@ div.modalBackdrop {
   justify-content: space-between;
   width: 236px;
   height: 40px;
+  z-index: 10000;
 
   position: absolute;
   right: 0px;
@@ -809,7 +810,7 @@ a {
   height: 40px;
   background: #e0e2e7;
   border-radius: 4px;
-
+  z-index: 10000;
   font-family: 'NotoSansKR-B', sans-serif;
   font-style: normal;
   font-weight: bold;
